[package]
name = "task-manager"
version = "0.1.0"
authors = ["Bogdan Crisan <bogdan@crbl.studio>"]
edition = "2021"
rust-version = "1.65"


[dependencies]
arboard = "3.2.0"
egui = "0.21.0"
egui_extras = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
nom = "7.1.3"
regex = "1.7.1"
serde = { version = "1.0.159", features = ["derive"] }
sysinfo = "0.28.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

